# todo_list_fastapi

./: .coverage  database.db  pyproject.toml
migrations/: env.py
migrations/versions/: 7e204f14ccd2_create_users_table.py  9010c7db2021_create_users_table.py
src/: settings.py
src/app/: app.py  schemas.py  security.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
